spade-tests/src/snapshots/spade_tests__integration__namespace_tests__transitive_registers_can_not_be_stored_in_registers.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Ports can not be put in a register
  ┌─ testinput:6:18
  │
6 │     reg(clk) _ = a;
  │                  ^ This is a port
  │
  = struct X {a: &bool, b: bool} is a port


